angular/src/styles.scss
/* You can add global styles to this file, and also import other style files */

:root .lpx-theme-dark {
  .abp-support {
    background-image: url('assets/images/getting-started/abp-support-white.svg');
  }
  .abp-community {
    background-image: url('assets/images/getting-started/abp-community-white.svg');
  }
  .abp-blog {
    background-image: url('assets/images/getting-started/abp-blog-white.svg');
  }
  .logo-x {
    background-image: url('assets/images/getting-started/x-white.svg');
  }
}

:root {
  --lpx-theme-light-bg: url('assets/images/login/login-bg-img-light.svg');
  --lpx-theme-dim-bg: url('assets/images/login/login-bg-img-dim.svg');
  --lpx-theme-dark-bg: url('assets/images/login/login-bg-img-dark.svg');

  --lpx-logo-icon: url('assets/images/logo/icon.svg');
  --lpx-logo-url: var(--lpx-logo-icon);
  --lpx-logo: var(--lpx-logo-icon);

  .abp-logo {
    background-repeat: no-repeat;
  }

  .abp-support {
    width: 178px;
    height: 30px;
    background-image: url('assets/images/getting-started/abp-support.svg');
  }

  .abp-community {
    width: 215px;
    height: 30px;
    background-image: url('assets/images/getting-started/abp-community.svg');
  }

  .abp-blog {
    width: 142px;
    height: 30px;
    background-image: url('assets/images/getting-started/abp-blog.svg');
  }

  .logo-x {
    width: 20px;
    height: 20px;
    background-image: url('assets/images/getting-started/x.svg');
  }
}

/* Hide side nav/menu for patient users only */
body.externaluser-role,
html.externaluser-role {
  .lpx-topbar-container,
  .lpx-topbar {
    display: none !important;
  }

  .lpx-sidebar-container,
  .lpx-sidebar,
  //.lpx-menu-container,
  //.lpx-menu,
  
  aside,
  .externaluser-sidebar-hidden {
    display: none !important;
  }

  .lpx-content-container,
  main,
  .externaluser-main-full {
    margin-left: 0 !important;
    padding-left: 0 !important;
  }

  /* Hide user text next to avatar for patient role */
  lpx-avatar + .lpx-menu-item-text {
    display: none !important;
  }
}

